force-app/main/default/objects/MetadataDeployComplete__e/MetadataDeployComplete__e.object-meta.xml
<CustomObject>
    <description>Event raised on completion of a metadata deploy in Apex</description>
    <label>MetadataDeployComplete</label>
    <pluralLabel>MetadataDeployCompletes</pluralLabel>
</CustomObject>