force-app/main/default/objects/MetadataDeployComplete__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>DeployResult Status value</description>
    <label>Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>