force-app/main/default/objects/MetadataDeployComplete__e/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the metadata deployment succeeded</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>